--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,37 +12,37 @@
     "lang": "es-CL",
     "icons": [
         {
-            "src": "/public/alfa_512x512.png",
+            "src": "alfa_512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "/public/alfa_48x48.png",
+            "src": "alfa_48x48.png",
             "sizes": "48x48",
             "type": "image/png"
         },
         {
-            "src": "/public/alfa_96x96.png",
+            "src": "alfa_96x96.png",
             "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "/public/alfa_144x144.png",
+            "src": "alfa_144x144.png",
             "sizes": "144x144",
             "type": "image/png"
         },
         {
-            "src": "/public/alfa_192x192.png",
+            "src": "alfa_192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/public/alfa_256x256.png",
+            "src": "alfa_256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "/public/alfa_384x384.png",
+            "src": "alfa_384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         }
