Feat Pagos Full: Tela com status de pagamentos

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Alfatur",
-    "short_name": "ALF",
+    "name": "Alfatur Chile",
+    "short_name": "Alfatur Chile",
     "start_url": "https://alfatur.symbster.com/",
     "scope": "/",
     "display": "standalone",
